# BSFW_RPC

./: .gitmodules  release.sh
client/: CMakeLists.txt
client/Src/: main.cpp
include/: msgdata.h
server/: CMakeLists.txt  release.sh
server/Src/: main.cpp
